# thread_registrar

./: CMakeLists.txt  README.md  tr_link.ld
examples/: CMakeLists.txt  with_main.cc  without_main.cc
include/thread_registrar/: thread_registrar.h
src/: thread_registrar.c  thread_registrar_main.c
